style(app): fix overflow bug mobile

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -503,3 +503,7 @@ b {
   font-weight: 400;
   color: var(--red);
 }
+
+.overflow {
+  overflow: hidden !important;
+}
