--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -315,7 +315,7 @@
 
   .item-navbar {
     color: var(--black);
-    line-height: 5rem;
+    line-height: 4.5rem;
     font-size: 1.45rem;
   }
 
